# SED_GROUP

./: CMakeLists.txt  README.md  a.out  main  main.cpp
Controller/: HomepageController.cpp  HomepageController.h  HouseController.cpp  HouseController.h  MemberController.cpp  MemberController.h  SystemController.cpp  SystemController.h
Model/: GuestModel.cpp  House.cpp  House.h  Member.cpp  Member.h  MemberModel.cpp  Occupier.cpp  Occupier.h  Owner.cpp  Owner.h  SystemModel.cpp  SystemModel.h
View/: MemberView.cpp  MemberView.h
