cmake_minimum_required(VERSION 3.23)
project(SED_GROUP)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_BUILD_TYPE Debug)

add_executable(SED_GROUP main.cpp Controller/HouseController.h Controller/HouseController.cpp Controller/HomepageController.cpp Controller/HomepageController.h Model/MemberModel.cpp Model/SystemModel.cpp Model/GuestModel.cpp)
